--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -85,7 +85,6 @@ $UIGap: 0.5em;
     gap: $UIGap;
     overflow-y: auto;
     overflow-x: hidden;
-    max-height: calc(-80px + 70vh);
     scrollbar-width: none;
     &::-webkit-scrollbar {
       display: none;
@@ -145,6 +144,7 @@ $UIGap: 0.5em;
 @media screen and (max-width: 800px) {
   .emoticons-popup {
     width: 100%;
+    max-height: 520px;
   }
 }
 
@@ -152,6 +152,7 @@ $UIGap: 0.5em;
   .emoticons-popup {
     display: flex;
     flex-direction: row;
+    top: 0;
 
     .header-buttons {
       flex-direction: column;
@@ -175,19 +176,11 @@ $UIGap: 0.5em;
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      height: fit-content;
 
       .emoticon-button {
         min-height: 40px;
         min-width: 40px;
-        height: fit-content;
       }
     }
-  }
-}
-
-@media (pointer: coarse) {
-  .emoticons-popup {
-    top: 0;
   }
 }
