--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -141,10 +141,11 @@ $UIGap: 0.5em;
   transition: background 0.2s ease, opacity 0.2s ease !important;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1200px) {
   .emoticons-popup {
     width: 100%;
     max-height: 520px;
+    top: 0;
   }
 }
 
@@ -152,7 +153,7 @@ $UIGap: 0.5em;
   .emoticons-popup {
     display: flex;
     flex-direction: row;
-    top: 0;
+    max-height: 410px;
 
     .header-buttons {
       flex-direction: column;
@@ -166,9 +167,23 @@ $UIGap: 0.5em;
         order: 2;
       }
 
+      button {
+        width: 38px !important;
+        height: 38px !important;
+
+        svg {
+          width: 18px !important;
+          height: 18px !important;
+        }
+      }
+
       .category-buttons {
         flex-direction: column;
         order: 3;
+
+        .category-button {
+          font-size: 1.2em;
+        }
       }
     }
 
