--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap');
+
 @mixin button-styles {
   border-radius: 0.2em !important;
   border: none;
@@ -28,7 +30,7 @@ $UIGap: 0.5em;
   transform: translateX(-50%);
   min-width: 300px;
   width: 800px;
-  max-height: 70vh;
+  max-height: 90vh;
   overflow: hidden;
 
   .header-buttons {
@@ -50,6 +52,7 @@ $UIGap: 0.5em;
       display: flex;
       justify-content: center;
       gap: $UIGap;
+      font-family: "Noto Color Emoji", sans-serif !important;
 
       .category-button {
         @include button-styles;
@@ -144,10 +147,11 @@ $UIGap: 0.5em;
 @media screen and (max-width: 1200px) {
   .emoticons-popup {
     width: 100%;
-    top: 0;
+    top: 30px; 
+    max-height: 70vh;
 
     .emoticon-buttons {
-      height: 40vh;
+      max-height: calc(70vh - 70px);
     }
   }
 }
@@ -156,6 +160,7 @@ $UIGap: 0.5em;
   .emoticons-popup {
     display: flex;
     flex-direction: row;
+    top: 0;
 
     .header-buttons {
       flex-direction: column;
@@ -165,7 +170,7 @@ $UIGap: 0.5em;
       .clear-button {
         display: none;
       }
-       
+
       button {
         width: 40px !important;
         height: 40px !important;
@@ -189,7 +194,6 @@ $UIGap: 0.5em;
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      height: 40vh;
       min-height: 320px;
 
       .emoticon-button {
