- Version 1.1.2 - On category change also is updating toggle button icon and added also the category name at the end

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -124,7 +124,7 @@ $UIGap: 0.5em;
   }
 }
 
-.emoticons-mobile-toggle {
+.emoticons-toggle {
   position: fixed !important;
   bottom: 5em !important;
   right: -2px !important;
