- Small fix for the buttons height

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -190,10 +190,12 @@ $UIGap: 0.5em;
       flex-direction: row;
       flex-wrap: wrap;
       min-height: 320px;
+      height: fit-content;
 
       .emoticon-button {
         min-height: 40px;
         min-width: 40px;
+        height: fit-content;
       }
     }
   }
