--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -130,7 +130,7 @@ $UIGap: 0.5em;
       cursor: pointer;
       position: relative;
       background: var(--highlight-color, var(--default-button));
-      padding: 0;
+      padding: $UIGap;
 
       img {
         display: block;
@@ -187,7 +187,7 @@ $UIGap: 0.5em;
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 530px) {
   .emoticons-popup {
     display: flex;
     flex-direction: row;
